<resources>
	<string name="accounts">Accounts</string>
	<string name="blotter">Blotter</string>
	<string name="currencies">Currencies</string>
	<string name="categories">Categories</string>
	<string name="budgets">Budgets</string>
	<string name="projects">Projects</string>
	<string name="ok">OK</string>
	<string name="reset">Reset</string>
	<string name="clear">Clear</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="close">Close</string>
	<string name="edit_account">Edit Account</string>
	<string name="add_account">Add account</string>
	<string name="title">Title</string>
	<string name="payee">Payee</string>
	<string name="currency">Currency</string>
	<string name="add_currency">Add Currency</string>
	<string name="opening_amount">Opening amount</string>
	<string name="limit_amount">Limit amount</string>
	<string name="view">View</string>
	<string name="edit">Edit</string>
	<string name="delete">Delete</string>
	<string name="add_transaction">Add Transaction</string>
	<string name="account">Account</string>
	<string name="category">Category</string>
	<string name="add_category">Add Category</string>
	<string name="income">Income</string>
	<string name="expense">Expense</string>
	<string name="amount">Amount</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="parent">Parent</string>
	<string name="total">Total:</string>
	<string name="filter">Filter</string>
	<string name="no_filter">No filter</string>
	<string name="transfer">Transfer</string>
	<string name="confirmation">Confirmation</string>
	<string name="delete_category_dialog">Delete the category and all sub-categories (if any)?</string>
	<string name="currency_delete_alert">Can\'t delete the currency which is in use.</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="error">Error</string>
	<string name="include_subcategories">Include sub-categories</string>
	<string name="include_subcategories_summary">Add transactions from sub-categories</string>
	<string name="start_date">Start date</string>
	<string name="end_date">End date</string>
	<string name="budget">Budget</string>
	<string name="no_limit">No limit</string>
	<string name="period">Period</string>
	<string name="period_from">Period From</string>
	<string name="period_to">Period To</string>
	<string name="period_recur">Period Recur</string>
	<string name="preferences">Preferences</string>
	<string name="amount_picker">Amount Picker</string>
	<string name="integer_part_title">Number of digits</string>
	<string name="use_hundredth_title">Use hundredths</string>
	<string name="project">Project</string>
	<string name="select_account">Please select account...</string>
	<string name="select_currency">Please select currency...</string>
	<string name="select_category">Please select category...</string>
	<string name="select_project">Please select project...</string>
	<string name="warning">Warning</string>
	<string name="no_accounts">You should start with creating an account. Tap the green \'+\' at the bottom...</string>
	<string name="no_budgets">No budgets</string>
	<string name="no_transactions">No transactions</string>
	<string name="no_categories">No categories</string>
	<string name="no_currencies">No currencies</string>
	<string name="no_projects">No projects</string>
	<string name="no_recur">No recur</string>
	<string name="account_from">From Account</string>
	<string name="account_to">To Account</string>
	<string name="amount_from">Amount Out</string>
	<string name="amount_to">Amount In</string>
	<string name="rate">Rate</string>
	<string name="no_rate">No rate</string>
	<string name="transaction">Transaction</string>
	<string name="transaction_title">New Transaction</string>
	<string name="transfer_title">New Transfer</string>
	<string name="about">About</string>
	<string name="about_copyright2">All rights reserved</string>
	<string name="menu">Menu</string>
	<string name="location">Location</string>
	<string name="locations">Locations</string>
	<string name="no_locations">No locations</string>
	<string name="use_gps">Use GPS</string>
	<string name="use_gps_summary">Use GPS to get current location for transaction</string>
	<string name="use_my_location">Use My Location</string>
	<string name="use_my_location_summary">Use My Location to get current location for a new location</string>
	<string name="select_location">Select location</string>
	<string name="no_fix">Unknown location</string>
	<string name="attribute">Attribute</string>
	<string name="attributes">Attributes</string>
	<string name="parent_attributes">Parent attributes</string>
	<string name="change_attributes">Change attributes</string>
	<string name="calculator">Calculator</string>
	<string name="no_attributes">No attributes</string>
	<string name="add_attribute">Add attribute</string>
	<string name="new_attribute">New attribute</string>
	<string-array name="attribute_types">
		<item>Text</item>
		<item>Number</item>
		<item>List</item>
		<item>Checkbox</item>
	</string-array>
	<string name="attribute_type">Type</string>
	<string name="attribute_name">Name</string>
	<string name="attribute_values">Values</string>
	<string name="attribute_values_hint">Use ; to separate values</string>
	<string name="attribute_default_value">Default value</string>
	<string name="checkbox_values">Yes/No</string>
	<string name="checkbox_values_yes">Yes</string>
	<string name="checkbox_values_no">No</string>
	<string name="checkbox_values_hint">Yes;No</string>
	<string name="location_name">Location name</string>
	<string name="satellite_on">Satellite On</string>
	<string name="satellite_off">Satellite Off</string>
	<string name="my_location">My location</string>
	<string name="move_marker_to_center">Marker to center</string>
	<string name="move_go_to_marker">Go to marker</string>
	<string name="tap_location">Tap \'My location\' marker to manually adjust location</string>
	<string name="note">Note</string>
	<string name="service_is_not_available">Service is not available, please try again later</string>
	<string name="resolve_address">Resolve address</string>
	<string name="resolving_address">Resolving address...</string>
	<string name="report">Report</string>
	<string name="reports">Reports</string>
	<string name="no_reports">No reports</string>
	<string name="select_report">Please select report...</string>
	<string name="overall">Overall</string>
	<string name="report_by_period">By Period</string>
	<string name="report_by_period_summary">Transactions report by period</string>
	<string name="report_by_category">By Category</string>
	<string name="report_by_category_summary">Transactions report by category</string>
	<string name="report_by_location">By Location</string>
	<string name="report_by_location_summary">Transactions report by location</string>
	<string name="report_by_project">By Project</string>
	<string name="report_by_project_summary">Transactions report by project</string>
	<string name="currency_name">Name</string>
	<string name="currency_symbol">Symbol</string>
	<string name="currency_code">Code</string>
	<string name="currency_code_hint">ISO 4217 code</string>
	<string name="is_default">Is default</string>
	<string name="decimals">\nDecimals</string>
	<string name="decimal_separator">Decimal\nseparator</string>
	<string name="group_separator">Group\nseparator</string>
	<string name="field_separator">Field\nseparator</string>
	<string name="include_header">Include\nheader</string>
	<string name="user_interface">User interface</string>
	<string name="sort_accounts">Sort accounts</string>
	<string name="sort_accounts_summary">Define sort order for accounts list (requires restart)</string>
	<string name="sort_locations">Sort locations</string>
	<string name="sort_locations_summary">Define sort order for locations list</string>
	<string name="pin_protection">PIN Protection</string>
	<string name="pin_protection_summary">Check to protect access with PIN</string>
	<string name="change_pin">Change PIN</string>
	<string name="change_pin_summary">Change the PIN number</string>
	<string name="protection">Protection</string>
	<string name="transaction_screen">New transaction screen</string>
	<string name="transaction_screen_summary">Preferences for new transaction/transfer screen</string>
	<string name="screen_layout">Screen layout</string>
	<string name="show_location">Show location</string>
	<string name="show_location_summary">Show location drop-down</string>
	<string name="show_location_order">Location order</string>
	<string name="show_location_order_summary">Relative position for the location drop down</string>
	<string name="show_payee">Show payee</string>
	<string name="show_payee_summary">Show payee edit box</string>
	<string name="show_note">Show note</string>
	<string name="show_note_summary">Show note edit box</string>
	<string name="show_note_order">Note order</string>
	<string name="show_note_order_summary">Relative position for the note box</string>
	<string name="show_project">Show project</string>
	<string name="show_project_summary">Show project drop-down</string>
	<string name="show_project_order">Project order</string>
	<string name="show_project_order_summary">Relative position for the project drop-down</string>
	<string name="remember_selection">Remember the selection</string>
	<string name="remember_last_account">Last account</string>
	<string name="remember_last_account_summary">Remember the last selected account</string>
	<string name="remember_last_location">Last location</string>
	<string name="remember_last_location_summary">Remember the last location for the selected category</string>
	<string name="remember_last_project">Last project</string>
	<string name="remember_last_project_summary">Remember the last project for the selected category</string>
	<string name="home_screen">Home Screen</string>
	<string name="shortcut_new_transaction">\'New Transaction\' shortcut</string>
	<string name="shortcut_new_transfer">\'New Transfer\' shortcut</string>
	<string name="shortcut_summary">Add the shortcut to the Home Screen</string>
	<string name="use_fixed_layout">Use fixed layout</string>
	<string name="use_fixed_layout_summary">Fix OK/Cancel buttons in the layout</string>
	<string name="gdocs_backup">Google Drive Backup</string>
	<string name="user_login">Login</string>
	<string name="user_login_summary">Google account login (username)</string>
	<string name="user_password">Password</string>
	<string name="user_password_summary">Google account password</string>
	<string name="backup_folder">Backup Folder</string>
	<string name="backup_folder_summary">To store backup files create a new folder in My Drive</string>
	<string name="other">Other</string>
	<string name="send_error_reports">Send error reports</string>
	<string name="send_error_reports_summary">Send anonymous error reports to orangesoftware.ru (requires restart)</string>
	<string name="enable_widget">Enable widget</string>
	<string name="enable_widget_summary">Show account total on the widget</string>
	<string name="include_transfers_into_reports">Transfers into reports</string>
	<string name="include_transfers_into_reports_summary">Include transfers into reports</string>
	<string name="ui_language">Locale</string>
	<string name="ui_language_summary">Set language of user interface (requires restart!)</string>
	<string name="restore_missed_scheduled_transactions">Restore missed schedules</string>
	<string name="restore_missed_scheduled_transactions_summary">Missed scheduled transactions will be restored with \'Restored\' status</string>
	<string name="show_picture">Show \'Take picture\'</string>
	<string name="show_picture_summary">Show \'Take picture\' box</string>
	<string name="empty_report">Empty report</string>
    <string name="date_format">Date format</string>
    <string name="choose_account">Choose account</string>
</resources>