<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:padding="3dp">
	<View android:layout_height="1dp" android:background="@drawable/divider_horizontal_dark"
		android:layout_width="fill_parent" android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp" />
	<TextView android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:layout_marginLeft="3dp"
		android:text="@string/period"/>
	<Button android:layout_height="wrap_content" android:id="@+id/bPeriod"
		android:layout_width="fill_parent"/>
	<View android:layout_height="1dp" android:background="@drawable/divider_horizontal_dark"
		android:layout_width="fill_parent" android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp" />
		
	<TableLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:stretchColumns="*">
		<TableRow>
			<TextView android:layout_marginLeft="3dp"
				android:text="@string/decimals"/>
			<TextView android:layout_marginLeft="3dp"
				android:text="@string/decimal_separator"/>
			<TextView android:layout_marginLeft="3dp"
				android:text="@string/group_separator"/>
		</TableRow>
		<TableRow>
			<Spinner android:id="@+id/spinnerDecimals"
				android:entries="@array/decimals"/>
			<Spinner android:id="@+id/spinnerDecimalSeparators"
				android:entries="@array/decimal_separators"/>
			<Spinner android:id="@+id/spinnerGroupSeparators"
				android:entries="@array/group_separators"/>
		</TableRow>
		<View android:layout_height="1dp" android:background="@drawable/divider_horizontal_dark"
			android:layout_width="fill_parent" android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp" />
		<TableRow>
			<TextView android:layout_marginLeft="3dp"
				android:text="@string/field_separator"/>
			<TextView android:layout_marginLeft="3dp"
				android:text="@string/include_header"/>
		</TableRow>
		<TableRow>
			<Spinner android:id="@+id/spinnerFieldSeparator"
				android:entries="@array/field_separators"/>
			<CheckBox android:id="@+id/checkboxIncludeHeader"
				android:checked="true"/>
		</TableRow>
	</TableLayout>
	
	<include layout="@layout/ok_cancel_buttons" />

</LinearLayout>