<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:padding="3dp">
	<View android:layout_height="1dp" android:background="@drawable/divider_horizontal_dark"
		android:layout_width="fill_parent" android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp" />
	<TextView android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:layout_marginLeft="3dp" android:text="@string/currency_name"></TextView>
	<EditText android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/title"
		android:maxLength="20"></EditText>
	<TableLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent">
		<TableRow android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<TextView android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:layout_weight="1"
				android:layout_marginLeft="3dp" android:text="@string/currency_code"></TextView>
			<TextView android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:layout_weight="1" android:layout_marginLeft="3dp" android:text="@string/currency_symbol"></TextView>
		</TableRow>
		<TableRow android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/name"
				android:ellipsize="none" android:singleLine="true"
				android:maxLength="3" android:layout_weight="1" android:hint="@string/currency_code_hint"></EditText>
			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/symbol"
				android:singleLine="true" android:maxLength="3" android:layout_weight="1" android:hint="@string/currency_symbol_hint"></EditText>
		</TableRow>
	</TableLayout>
	<TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent"><TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"><TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginLeft="3dp" android:text="@string/decimals" android:layout_weight="1"></TextView><TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginLeft="3dp" android:layout_weight="1" android:text="@string/decimal_separator"></TextView><TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginLeft="3dp" android:layout_weight="1" android:text="@string/group_separator"></TextView></TableRow>
<TableRow android:layout_width="wrap_content" android:layout_height="wrap_content"><Spinner android:layout_height="wrap_content" android:id="@+id/spinnerDecimals" android:entries="@array/decimals" android:layout_width="wrap_content" android:layout_weight="1"></Spinner><Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/spinnerDecimalSeparators" android:entries="@array/decimal_separators"></Spinner><Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/spinnerGroupSeparators" android:entries="@array/group_separators"></Spinner></TableRow>
</TableLayout>
	
	<CheckBox android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:id="@+id/is_default"
		android:text="@string/is_default" />
	<include layout="@layout/ok_cancel_buttons" />

</LinearLayout>
