<!--
  Copyright (c) 2010 Denis Solonenko.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v2.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/old-licenses/gpl-2.0.html
  
  Contributors:
      Denis Solonenko - initial API and implementation
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_width="fill_parent"
	android:orientation="vertical">
	<TextView android:layout_width="fill_parent" android:id="@+id/period" 
				android:layout_height="wrap_content" android:text="@string/no_filter"
				android:gravity="center_horizontal" android:layout_marginBottom="5dp" android:ellipsize="marquee" android:singleLine="true"/>
	<ListView android:id="@android:id/list" android:layout_width="fill_parent"
		android:layout_weight="1" android:layout_height="wrap_content" android:scrollbarStyle="outsideInset">
	</ListView>
    <TextView android:id="@id/android:empty"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_weight="1" android:gravity="center" android:text="@string/empty_report" />
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:background="#FFF"
		android:paddingTop="2dp">
		<ImageButton android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/bFilter"
			android:src="@drawable/ic_menu_filter_off"/>
        <LinearLayout android:layout_width="wrap_content"
            android:layout_weight="1" android:layout_height="fill_parent"
            android:orientation="vertical" android:padding="3dp">
            <TextView android:id="@+id/labelTotal" android:layout_height="wrap_content"
                android:textStyle="bold" android:gravity="right"
                android:layout_width="fill_parent" android:text="@string/total"
                android:textColor="#000000" />
            <ru.orangesoftware.financisto.widget.MyViewFlipper android:layout_height="wrap_content"
                android:layout_width="fill_parent" android:layout_weight="1"
                android:gravity="right|center_vertical" android:id="@+id/flipperTotal" />
            <TextView android:layout_height="wrap_content"
                android:layout_width="fill_parent" android:layout_weight="1"
                android:id="@+id/total" android:gravity="right|center"
                android:textStyle="bold" android:visibility="gone"/>
        </LinearLayout>
	</LinearLayout>
</LinearLayout>
